--- a/login.html
+++ b/login.html
@@ -55,6 +55,7 @@
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+    </div>
 
   <script src="js/init.js"></script>
   <script src="js/login.js"></script>
