--- a/login.html
+++ b/login.html
@@ -42,11 +42,11 @@
     <form>
       <div class="form-group">
         <label for="exampleInputEmail1">Usuario</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1">Contraseña</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña">
       </div>
       <button type="submit" class="btn btn-primary">Enviar</button>
     </form>
