--- a/login.html
+++ b/login.html
@@ -27,31 +27,26 @@
       padding-bottom: 40px;
       background-color: #f5f5f5;
     }
-
-    .signin {
-      width: 100%;
-      max-width: 330px;
-      padding: 15px;
-      margin: auto;
-    }
   </style>
 </head>
 
 <body class="text-center">
-  <div class="container p-5">
-    <form>
-      <div class="form-group">
-        <label for="exampleInputEmail1">Usuario</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
-      </div>
-      <div class="form-group">
-        <label for="exampleInputPassword1">Contraseña</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña">
-      </div>
-      <button type="submit" class="btn btn-primary">Enviar</button>
-    </form>
-    </div>
-
+  <form class="form-signin">
+<img class="mb-4" src="img/login.png" alt="" width="300" height="200">
+<h1 class="h3 mb-3 font-weight-normal">Iniciar sesion</h1>
+<label for="inputEmail" class="User">Usuario</label>
+<input type="email" id="inputEmail" class="form-control" placeholder="Email" required>
+<p></p>
+<label for="inputPassword" class="sr-only">Contraseña</label>
+<input type="password" id="inputPassword" class="form-control" placeholder="Contraseña" required>
+<p></p>
+<div class="checkbox mb-3">
+  <label>
+    <input type="checkbox" value="remember-me"> Recordarme
+  </label>
+</div>
+<button class="btn bt n-lg btn-primary btn-block" type="button" id="redirect">Ingresar</button>
+</form>
   <script src="js/init.js"></script>
   <script src="js/login.js"></script>
 </body>
