--- a/products.html
+++ b/products.html
@@ -23,16 +23,24 @@
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
       </div>
     </nav>
-    <div class="container p-5">
+    <main role="main" class="pb-5">
+      <div class="text-center p-4">
+          <h2>Productos</h2>
+      </div>
       
-    </div>
+      <div class="container">
+          <div class="row">
+              <div class="list-group" id="cat-list-container">
+              </div>
+          </div>
+      </div>
+  </main>
     <footer class="text-muted bg-light">
       <div class="container">
         <p class="float-right">
           <a href="#">Volver arriba</a>
         </p>
         <p>Este sitio forma parte de Desarrollo Web - JAP - 2020</p>
-        <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
       </div>
     </footer>
     <div id="spinner-wrapper"><div class="lds-ring"><div></div><div></div><div></div><div></div></div></div>
