--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <img class="mb-4" src="img/login.png" alt="" width="300" height="200">
 <h1 class="h3 mb-3 font-weight-normal">Iniciar sesion</h1>
 <label for="user" class="User">Usuario:</label>
-<input type="user" id="user" class="user" placeholder="Email">
+<input type="user" id="email" class="user" placeholder="Email">
 <p></p>
 <label for="Password" class="password">Contraseña:</label>
 <input type="password" id="password" class="password" placeholder="Contraseña">
