--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 </head>
 
 <body class="text-center">
-  <form class="form-signin" id="form">
-<img class="mb-4" src="img/login.png" alt="" width="300" height="200">
-<h1 class="h3 mb-3 font-weight-normal">Iniciar sesion</h1>
+  <form class="form-signin">
+  <img class="mb-4" src="img/login.png" alt="" width="300" height="100">
+<h1 class="h3 mb-3 font-weight-normal">Iniciar sesión</h1>
 <label for="user" class="User">Usuario:</label>
 <input type="user" id="email" class="user" placeholder="Email">
 <p></p>
@@ -45,8 +45,8 @@
     <input type="checkbox" value="remember-me"> Recordarme
   </label>
 </div>
-<button class="btn bt n-lg btn-primary btn-block" type="submit" id="redirect">Ingresar</button>
-<p class="alertas" id="alertas"></p>
+<button class="btn bt n-lg btn-primary btn-block" type="button" id="redirect" click='validar();'>Ingresar</button>
+<div id='error'></div>
 </form>
   <script src="js/init.js"></script>
   <script src="js/login.js"></script>
