--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <img class="mb-4" src="img/login.png" alt="" width="300" height="100">
 <h1 class="h3 mb-3 font-weight-normal">Iniciar sesión</h1>
 <label for="inputUser" class="sr-only">Usuario:</label>
-<input type="user" id="InputUser" class="form-control" placeholder="Usuario" required>
+<input type="user" id="inputUser" class="form-control" placeholder="Usuario" required>
 <div id="error"></div>
 <p></p>
 <label for="inputPassword" class="sr-only">Contraseña:</label>
