--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
   <form class="form-signin">
   <img class="mb-4" src="img/login.png" alt="" width="300" height="100">
 <h1 class="h3 mb-3 font-weight-normal">Iniciar sesión</h1>
-<label for="inputUser" class="sr-only">Usuario:</label>
+<label for="inputUser" class="only">Usuario:</label>
 <input type="user" id="inputUser" class="form-control" placeholder="Usuario" required>
 <p></p>
-<label for="inputPassword" class="sr-only">Contraseña:</label>
+<label for="inputPassword" class="only">Contraseña:</label>
 <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
 <p></p>
 <div class="checkbox mb-3">
