--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <input type="checkbox" value="remember-me"> Recordarme
   </label>
 </div>
-<button class="btn bt n-lg btn-primary btn-block" type="button" onclick="validar()">Ingresar</button>
+<button class="btn btn-secondary btn-lg btn-block" type="button" onclick="validar()">Ingresar</button>
 <div id="error"></div>
 </form>
   <script src="js/init.js"></script>
