--- a/products.html
+++ b/products.html
@@ -38,7 +38,7 @@
                         <input type="radio" name="options" autocomplete="off">Precio menor - Precio mayor
                     </label>
                     <label class="btn btn-light" id="sortByCount" >
-                        <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Precio:
+                        <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Relevancia:
                     </label>
                 </div>
             </div>
@@ -48,7 +48,7 @@
             <div class="col-md-6 col-sm-12 mb-1 container">
               <div class="row container p-0 m-0">
                 <div class="col">
-                  <p class="font-weight-normal text-right my-2">Product.</p>
+                  <p class="font-weight-normal text-right my-2">Precio:</p>
                 </div>
                 <div class="col">
                   <input class="form-control" type="number" placeholder="min." id="rangeFilterCountMin">
