--- a/products.html
+++ b/products.html
@@ -31,14 +31,14 @@
         <div class="row">
             <div class="col text-right">
                 <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
-                    <label class="btn btn-light active" id="priceAsc" >
+                    <label class="btn btn-light active" id="sortAsc" >
                         <input type="radio" name="options" autocomplete="off" checked>Precio mayor - Precio menor
                     </label>
-                    <label class="btn btn-light" id="priceDesc" >
+                    <label class="btn btn-light" id="sortDesc" >
                         <input type="radio" name="options" autocomplete="off">Precio menor - Precio mayor
                     </label>
-                    <label class="btn btn-light" id="sortBySoldCount" >
-                        <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Relevancia:
+                    <label class="btn btn-light" id="sortByCount" >
+                        <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Relevancia
                     </label>
                 </div>
             </div>
@@ -48,18 +48,18 @@
             <div class="col-md-6 col-sm-12 mb-1 container">
               <div class="row container p-0 m-0">
                 <div class="col">
-                  <p class="font-weight-normal text-right my-2">Precio:</p>
+                  <p class="font-weight-normal text-right my-2">Productos:</p>
                 </div>
                 <div class="col">
-                  <input class="form-control" type="number" placeholder="min." id="filterCountMin">
+                  <input class="form-control" type="number" placeholder="min." id="rangeFilterCountMin">
                 </div>
                 <div class="col">
-                  <input class="form-control" type="number" placeholder="máx." id="filterCountMax">
+                  <input class="form-control" type="number" placeholder="máx." id="rangeFilterCountMax">
                 </div>
                 <div class="col-3 p-0">
                   <div class="btn-group" role="group">
-                    <button class="btn btn-light btn-block" id="priceFilterCount">Filtrar</button>
-                    <button class="btn btn-link btn-sm" id="clearPriceFilter">Limpiar</button>
+                    <button class="btn btn-light btn-block" id="rangeFilterCount">Filtrar</button>
+                    <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
                   </div>
                 </div>
               </div>
