--- a/products.html
+++ b/products.html
@@ -32,10 +32,10 @@
             <div class="col text-right">
                 <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
                     <label class="btn btn-light active" id="sortAsc" >
-                        <input type="radio" name="options" autocomplete="off" checked>Precio mayor - Precio menor
+                        <input type="radio" name="options" autocomplete="off" checked>Precio Menor - Precio Mayor
                     </label>
                     <label class="btn btn-light" id="sortDesc" >
-                        <input type="radio" name="options" autocomplete="off">Precio menor - Precio mayor
+                        <input type="radio" name="options" autocomplete="off">Precio Mayor - Precio Menor
                     </label>
                     <label class="btn btn-light" id="sortByCount" >
                         <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Relevancia
