--- a/products.html
+++ b/products.html
@@ -31,13 +31,13 @@
         <div class="row">
             <div class="col text-right">
                 <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
-                    <label class="btn btn-light active" id="sortAsc" >
+                    <label class="btn btn-light active" id="costAsc" >
                         <input type="radio" name="options" autocomplete="off" checked>Precio Menor - Precio Mayor
                     </label>
-                    <label class="btn btn-light" id="sortDesc" >
+                    <label class="btn btn-light" id="costDesc" >
                         <input type="radio" name="options" autocomplete="off">Precio Mayor - Precio Menor
                     </label>
-                    <label class="btn btn-light" id="sortByCount" >
+                    <label class="btn btn-light" id="soldCount" >
                         <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Relevancia
                     </label>
                 </div>
