--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
   </style>
 </head>
 
-<body class="text-center">
+<body class="text-center" id="fondo">
   <form class="form-signin">
-  <img class="mb-4" src="img/login.png" alt="" width="300" height="100">
+  <img class="mb-4" src="img/login.png" alt="" width="300" height="100" id="image">
 <h1 class="h3 mb-3 font-weight-normal">Iniciar sesión</h1>
 <label for="inputUser" class="only">Usuario:</label>
 <input type="user" id="inputUser" class="form-control" placeholder="Usuario" required>
@@ -45,7 +45,7 @@
     <input type="checkbox" value="remember-me"> Recordarme
   </label>
 </div>
-<button class="btn btn-secondary btn-lg btn-block" type="button" onclick="validar()">Ingresar</button>
+<button class="btn btn-success btn-block" type="button" onclick="validar()">Ingresar</button>
 <div id="error"></div>
 </form>
   <script src="js/init.js"></script>
