--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <p></p>
 <label for="inputPassword" class="only">Contraseña:</label>
 <input type="password" id="inputPassword" class="form-control input-sm chat-input" placeholder="Password" required>
-<div id="error"></div>
+<div id="error2"></div>
 <p></p>
 <div class="checkbox mb-3">
   <label>
