--- a/products.html
+++ b/products.html
@@ -52,14 +52,14 @@
                   <p class="font-weight-normal text-right my-2">Productos:</p>
                 </div>
                 <div class="col">
-                  <input class="form-control" type="number" placeholder="min." id="rangeFilterCountMin">
+                  <input class="form-control" type="number" placeholder="min." id="rangeFilterCostMin">
                 </div>
                 <div class="col">
-                  <input class="form-control" type="number" placeholder="máx." id="rangeFilterCountMax">
+                  <input class="form-control" type="number" placeholder="máx." id="rangeFilterCostMax">
                 </div>
                 <div class="col-3 p-0">
                   <div class="btn-group" role="group">
-                    <button class="btn btn-light btn-block" id="rangeFilterCount">Filtrar</button>
+                    <button class="btn btn-light btn-block" id="rangeFilter">Filtrar</button>
                     <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
                   </div>
                 </div>
@@ -85,8 +85,8 @@
     <div id="spinner-wrapper"><div class="lds-ring"><div></div><div></div><div></div><div></div></div></div>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/init.js"></script>
     <script src="js/login.js"></script>
+    <script src="js/init.js"></script>
     <script src="js/products.js"></script>
   </body>
 </html>
