--- a/products.html
+++ b/products.html
@@ -52,10 +52,10 @@
                   <p class="font-weight-normal text-right my-2">Productos:</p>
                 </div>
                 <div class="col">
-                  <input class="form-control" type="number" placeholder="min." id="rangeFilterCostMin">
+                  <input class="btn btn-light btn-block" type="number" placeholder="min." id="rangeFilterCostMin">
                 </div>
                 <div class="col">
-                  <input class="form-control" type="number" placeholder="máx." id="rangeFilterCostMax">
+                  <input class="btn btn-light btn-block" type="number" placeholder="máx." id="rangeFilterCostMax">
                 </div>
                 <div class="col-3 p-0">
                   <div class="btn-group" role="group">
