--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <input type="checkbox" value="remember-me"> Recordarme
   </label>
 </div>
-<button class="btn btn-light btn-block" type="button" onclick="validar()">Ingresar</button>
+<button class="btn btn-light btn-block" type="submit" onclick="validar()">Ingresar</button>
 
 </form>
   <script src="js/init.js"></script>
