--- a/product-info.html
+++ b/product-info.html
@@ -89,9 +89,9 @@
       --><label for="radio5">★</label>
     </p>
     <div>
-      <label for="inputComment" class="comments">Contraseña:</label>
-<input type="text" id="inputComment" class="btn-btn" placeholder="Comentario" required>
-<button class="btn" type="submit">Ingresar</button>
+      <label for="inputComment" class="comments">Comentarios:</label>
+<input type="text" id="inputComment" class="btn-btn" placeholder="comentario" required>
+<button class="btn" type="submit">Enviar</button>
     </div>
     </form>
   </main>
