--- a/product-info.html
+++ b/product-info.html
@@ -76,7 +76,7 @@
       </dl>
     </div>
     <form>
-    <p class="clasificacion">
+    <p class="clasificacion" >
       <input id="radio1" type="radio" name="estrellas" value="5"><!--
       --><label for="radio1">★</label><!--
       --><input id="radio2" type="radio" name="estrellas" value="4"><!--
@@ -87,6 +87,9 @@
       --><label for="radio4">★</label><!--
       --><input id="radio5" type="radio" name="estrellas" value="1"><!--
       --><label for="radio5">★</label>
+      <div id="required"></div>
+<div id="exito2"></div>
+<button class="btn" onclick="estrellitas()" type="button">Enviar</button>
     </p>
     <div>
       <label for="inputComments" class="comments">Comentarios:</label>
