--- a/product-info.html
+++ b/product-info.html
@@ -78,7 +78,7 @@
     <form>
       <label for="inputComments" class="comments">Comentarios:</label>
 <input type="text" id="inputComment" class="btn-btn" placeholder="comentario" required>
-<button class="btn" onclick="enviar()" type="button">Enviar</button>
+<button class="btn" onclick="enviar(); estrellitas();" type="button">Enviar</button>
 <div id="requerido"></div>
 <div id="exito"></div>
 <p class="clasificacion" >
@@ -94,7 +94,6 @@
   --><label for="radio5">★</label>
   <div id="required"></div>
 <div id="exito2"></div>
-<button class="btn" onclick="estrellitas()" type="button">Enviar</button>
 </p>
 <div>
     </div>
