--- a/product-info.html
+++ b/product-info.html
@@ -78,7 +78,7 @@
     <form>
       <label for="inputComments" class="comments">Comentarios:</label>
 <input type="text" id="inputComment" class="btn-btn" placeholder="comentario" required>
-<button class="btn" onclick="enviar(); estrellitas();" type="button">Enviar</button>
+<button class="btn btn-success green" onclick="enviar(); estrellitas();" type="button">Enviar</button>
 <div id="requerido"></div>
 <div id="exito"></div>
 <p class="clasificacion" >
