--- a/product-info.html
+++ b/product-info.html
@@ -80,7 +80,7 @@
 <div  id="requerido"></div>
 <div id="exito"></div>
 <br></br>
-<p class="clasificacion" id="star">
+<p class="clasificacion">
   <input id="radio1" type="radio" name="estrellas" value="5"><!--
   --><label for="radio1">★</label><!--
   --><input id="radio2" type="radio" name="estrellas" value="4"><!--
