--- a/Pagina.html
+++ b/Pagina.html
@@ -22,7 +22,7 @@
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
 
         <div class="dropdown">
-          <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="btn btn-secondary btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <div class="usuario" id="keyUsuario"></div></a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
             <a class="dropdown-item" href="cart.html">Mi carrito</a>
