--- a/Pagina.html
+++ b/Pagina.html
@@ -27,7 +27,7 @@
           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
             <a class="dropdown-item" href="cart.html">Mi carrito</a>
             <a class="dropdown-item" href="my-profile.html">Mi perfil</a>
-            <a class="dropdown-item"></a>
+            <a class="dropdown-item" href="index.html">Cerrar sesión</a>
           </div>
         </div>
       </div>
