--- a/product-info.html
+++ b/product-info.html
@@ -69,8 +69,42 @@
         
         <dt>Imágenes ilustrativas</dt>
         <dd>
-          <div class="row text-center text-lg-left pt-2" id="images">
-          </div>
+          <div class="border" class="w-75" class="w-50" class="w-25"">
+            <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class=" w-100" width="70%" src="img/prod1.jpg">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100" width="70%" src="img/prod1_1.jpg">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100" width="70%" src="img/prod1_2.jpg">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100" src="img/prod1_3.jpg">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100" src="img/prod1_4.jpg">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
         </dd>
 
         <dt>Comentarios</dt>
@@ -126,6 +160,11 @@
     <p id="exito"></p>
     </form>
   </main>
+
+  <div id="rp1"></div>
+  <div id="rp2>">
+    
+  </div>
   <footer class="text-muted">
     <div class="container">
       <p class="float-right">
