--- a/product-info.html
+++ b/product-info.html
@@ -69,7 +69,7 @@
         
         <dt>Imágenes ilustrativas</dt>
         <dd>
-          <div class="border" class="w-75" class="w-50" class="w-25"">
+          <div class="border w-25">
             <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -160,10 +160,12 @@
     <p id="exito"></p>
     </form>
   </main>
-
+  <br>
+  <dt>Productos relacionados</dt>
+<br>
   <div id="rp1"></div>
-  <div id="rp2>">
-    
+  <div id="rp2"></div>
+
   </div>
   <footer class="text-muted">
     <div class="container">
