--- a/product-info.html
+++ b/product-info.html
@@ -110,7 +110,7 @@
 
         <dt>Comentarios</dt>
         <dd>
-          <p id="comment"></p>
+          <p id="comment" class="border w-50"></p>
         </dd>
        
     <br></br>
@@ -160,13 +160,19 @@
   
     <p id="exito"></p>
     </form>
-  </main>
-  <br>
+    <br>
   <dt>Productos relacionados</dt>
 <br>
-  <div id="rp1"></div>
-  <div id="rp2"></div>
+<dd>
+  <div id="rp1" class="border w-50"></div>
+</dd>
+  <br>
+<dd>
+  <div id="rp2" class="border w-50"></div>
+</dd>
 
+  </main>
+  
   </div>
   <footer class="text-muted">
     <div class="container">
