--- a/sell.html
+++ b/sell.html
@@ -59,7 +59,7 @@
               <div class="row">
                 <div class="col-md-6 mb-3">
                   <label for="productName">Nombre</label>
-                  <input type="text" class="form-control" id="productName" placeholder="" value="" >
+                  <input type="text" class="btn btn-light btn-block" id="productName" placeholder="" value="" >
                   <div class="invalid-feedback">
                     Ingresa un nombre
                   </div>
@@ -78,13 +78,13 @@
               <div class="row">
                   <div class="col-md-12 mb-3">
                       <label for="productDescription">Descripción</label>
-                      <textarea class="form-control" id="productDescription" rows="3"></textarea>
+                      <textarea class="btn btn-light btn-block" id="productDescription" rows="3"></textarea>
                   </div>
                 </div>
               <div class="row">
                 <div class="col-md-3 mb-3">
                   <label for="zip">Costo</label>
-                  <input type="number" class="form-control" id="productCostInput" placeholder="" required="" value="0" min="0">
+                  <input type="number" class="btn btn-light btn-block" id="productCostInput" placeholder="" required="" value="0" min="0">
                   <div class="invalid-feedback">
                     El costo debe ser mayor que 0.
                   </div>
@@ -120,7 +120,7 @@
               <div class="row">
                   <div class="col-md-3 mb-3">
                     <label for="productCountInput">Cantidad en stock</label>
-                    <input type="number" class="form-control" id="productCountInput" placeholder="" required="" value="1" min="0">
+                    <input type="number" class="btn btn-light btn-block" id="productCountInput" placeholder="" required="" value="1" min="0">
                     <div class="invalid-feedback">
                       La cantidad es requerida.
                     </div>
