--- a/cart.html
+++ b/cart.html
@@ -52,8 +52,22 @@
     </div>
   </nav>
   <br>
-   <div id="cart">
-   </div>
+  <h4>Productos</h4>
+
+<table>
+  <th>
+  <tr>
+    <td>
+      <p id="cart"></p>
+    </td>
+  </tr>
+</th>
+ 
+</table>
+
+</body>
+</html>
+
    
    
   <div id="spinner-wrapper">
