--- a/product-info.html
+++ b/product-info.html
@@ -161,6 +161,7 @@
     <p id="exito"></p>
     </form>
     <br>
+    <div class="container" id="car">
   <dt>Productos relacionados</dt>
    <br>
    <dd>
@@ -170,8 +171,10 @@
    <dd>
   <div id="rp2" class="border w-50"></div>
    </dd>
-
+  </div>
   </main>
+  
+ 
   
   </div>
   <footer class="text-muted">
