--- a/cart.html
+++ b/cart.html
@@ -53,17 +53,34 @@
   </nav>
   <br>
   <h4>Artículos seleccionados</h4>
-
-<table>
-  <th>
+<div class="container">
+<table id="productscarrito">
+  <thead>
   <tr>
-    <td>
-      <p id="cart"></p>
+    <th colspan="1">Imagen</th>
+    <th>Nombre</th>
+    <th>Precio</th>
+    <th>Subtotal</th>
+    <th>Cantidad</th>
+    <th>Eliminar</th>
+
     </td>
   </tr>
-</th>
+  <div>
+    <td id="cart"></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    
+  </div>
+  </thead>
+  
+  </table>
+</div>
  
-</table>
+
 
 </body>
 </html>
