--- a/cart.html
+++ b/cart.html
@@ -53,33 +53,16 @@
   </nav>
   <br>
   <h4>Artículos seleccionados</h4>
+  <br>
 <div class="container">
 <table id="productscarrito">
-  <thead>
-  <tr>
-    <th colspan="1">Imagen</th>
-    <th>Nombre</th>
-    <th>Precio</th>
-    <th>Subtotal</th>
-    <th>Cantidad</th>
-    <th>Eliminar</th>
-
-    </td>
-  </tr>
+ 
   <div>
-    <td id="cart"></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td id="cart" class="text-center"></td>
     
   </div>
-  </thead>
-  </table>
+  
 </div>
- 
-
 
 </body>
 </html>
@@ -102,7 +85,14 @@
   <script src="js/cart.js"></script>
 
   
+  
 
+  <!------ Include the above in your HEAD tag ---------->
+  
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+ 
+  
+ 
 </body>
 
 </html>
