--- a/my-profile.html
+++ b/my-profile.html
@@ -51,26 +51,55 @@
       </div>
     </div>
   </nav>
-  <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-      <h4 class="alert-heading">¡A trabajar! :)</h4>
-      <p>Esta sección corresponde a: Entrega 7 (Fecha de entrega: 8/11/202020) -> Punto 1 y 2.</p>
-      <hr>
-      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
-    </div>
-  </div>
-  <footer class="text-muted bg-light">
-    <div class="container">
-      <p>Este sitio forma parte de Desarrollo Web - JAP - 2020</p>
-      <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
-    </div>
-  </footer>
-  <div class="alert fade alert-success" role="alert" id="alertResult">
-    <span id="resultSpan"></span>
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
+  <br>
+  <div class="container">
+    <div class="row">
+  <div class="col-md-9">
+    <div class="card">
+        <div class="card-body">
+            <div class="row">
+                <div class="col-md-12">
+                    <h4>Your Profile</h4>
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <form>
+                          <div class="form-group row">
+                            <label for="name" class="col-4 col-form-label">First Name</label> 
+                            <div class="col-8">
+                              <input id="name" name="name" placeholder="First Name" class="form-control here" type="text">
+                            </div>
+                          </div>
+                          <div class="form-group row">
+                            <label for="lastname" class="col-4 col-form-label">Last Name</label> 
+                            <div class="col-8">
+                              <input id="lastname" name="lastname" placeholder="Last Name" class="form-control here" type="text">
+                            </div>
+                          </div>
+                          <div class="form-group row">
+                            <label for="email" class="col-4 col-form-label">Email*</label> 
+                            <div class="col-8">
+                              <input id="email" name="email" placeholder="Email" class="form-control form-control-lg" required="required" type="text">
+                            </div>
+                          </div>
+                          <br>
+                          <div class="form-group row">
+                            <div class="offset-4 col-8">
+                              <button name="submit" type="submit" class="btn btn-primary">Editar los datos</button>
+                            </div>
+                          </div>
+                          <div class="form-group row">
+                            <div class="offset-4 col-8">
+                              <button name="submit" type="submit" class="btn btn-primary">Guardar los datos</button>
+                            </div>
+                          </div>
+                        </form>
+                      </div>                          
+                        </div>
+  
+
   <div id="spinner-wrapper">
     <div class="lds-ring">
       <div></div>
