--- a/my-profile.html
+++ b/my-profile.html
@@ -59,7 +59,7 @@
         <div class="card-body">
             <div class="row">
                 <div class="col-md-12">
-                    <h4>Your Profile</h4>
+                    <h4>Detalles del usuario</h4>
                     <hr>
                 </div>
             </div>
