--- a/my-profile.html
+++ b/my-profile.html
@@ -67,21 +67,21 @@
                 <div class="col-md-12">
                     <form>
                           <div class="form-group row">
-                            <label for="name" class="col-4 col-form-label">First Name</label> 
+                            <label for="name" class="col-4 col-form-label">Nombres</label> 
                             <div class="col-8">
-                              <input id="name" name="name" placeholder="First Name" class="form-control here" type="text">
+                              <input id="name" name="name" placeholder="Nombres" class="form-control here" type="text">
                             </div>
                           </div>
                           <div class="form-group row">
-                            <label for="lastname" class="col-4 col-form-label">Last Name</label> 
+                            <label for="lastname" class="col-4 col-form-label">Apellidos</label> 
                             <div class="col-8">
-                              <input id="lastname" name="lastname" placeholder="Last Name" class="form-control here" type="text">
+                              <input id="lastname" name="lastname" placeholder="Apellidos" class="form-control here" type="text">
                             </div>
                           </div>
                           <div class="form-group row">
-                            <label for="email" class="col-4 col-form-label">Email*</label> 
+                            <label for="email" class="col-4 col-form-label">Email</label> 
                             <div class="col-8">
-                              <input id="email" name="email" placeholder="Email" class="form-control form-control-lg" required="required" type="text">
+                              <input id="email" name="email" placeholder="Email" class="form-control form-control-lg" type="text">
                             </div>
                           </div>
                           <br>
