--- a/my-profile.html
+++ b/my-profile.html
@@ -84,6 +84,12 @@
                               <input id="email" name="email" placeholder="Email" class="form-control form-control-lg" type="text">
                             </div>
                           </div>
+                          <div class="form-group row">
+                            <label for="email" class="col-4 col-form-label">Edad</label> 
+                            <div class="col-8">
+                              <input id="email" name="email" placeholder="Edad" class="form-control form-control-lg" type="text">
+                            </div>
+                          </div>
                           <br>
                           <div class="form-group row">
                             <div class="offset-4 col-8">
