--- a/my-profile.html
+++ b/my-profile.html
@@ -53,7 +53,7 @@
   </nav>
   <br>
   <div class="container">
-    <div class="row">
+    <div class="row justify-content-center">
   <div class="col-md-9">
     <div class="card">
         <div class="card-body">
@@ -81,13 +81,19 @@
                           <div class="form-group row">
                             <label for="email" class="col-4 col-form-label">Email</label> 
                             <div class="col-8">
-                              <input id="email" name="email" placeholder="Email" class="form-control form-control-lg" type="text">
+                              <input id="email" name="email" placeholder="Email" class="form-control form-control here" type="text">
                             </div>
                           </div>
                           <div class="form-group row">
                             <label for="email" class="col-4 col-form-label">Edad</label> 
                             <div class="col-8">
-                              <input id="email" name="email" placeholder="Edad" class="form-control form-control-lg" type="text">
+                              <input id="email" name="email" placeholder="Edad" class="form-control form-control here" type="text">
+                            </div>
+                          </div>
+                          <div class="form-group row">
+                            <label for="email" class="col-4 col-form-label">Teléfono</label> 
+                            <div class="col-8">
+                              <input id="email" name="telefono" placeholder="Teléfono" class="form-control form-control here" type="text">
                             </div>
                           </div>
                           <br>
@@ -100,7 +106,7 @@
                       </div>                          
                         </div>
   
-
+                       
   <div id="spinner-wrapper">
     <div class="lds-ring">
       <div></div>
