--- a/my-profile.html
+++ b/my-profile.html
@@ -69,13 +69,13 @@
                           <div class="form-group row">
                             <label for="name" class="col-4 col-form-label">Nombres</label> 
                             <div class="col-8">
-                              <input id="name" name="name" placeholder="Nombres" class="form-control here" type="text">
+                              <input id="inputNombres" name="name" placeholder="Nombres" class="form-control here" type="text">
                             </div>
                           </div>
                           <div class="form-group row">
                             <label for="lastname" class="col-4 col-form-label">Apellidos</label> 
                             <div class="col-8">
-                              <input id="lastname" name="lastname" placeholder="Apellidos" class="form-control here" type="text">
+                              <input id="pellidos" name="lastname" placeholder="Apellidos" class="form-control here" type="text">
                             </div>
                           </div>
                           <div class="form-group row">
@@ -99,7 +99,7 @@
                           <br>
                           <div class="form-group row">
                             <div class="offset-4 col-8">
-                              <button name="submit" type="submit" class="btn btn-primary">Guardar los datos</button>
+                              <button name="submit" type="button" class="btn btn-primary">Guardar los datos</button>
                             </div>
                           </div>
                         </form>
