--- a/my-profile.html
+++ b/my-profile.html
@@ -75,7 +75,7 @@
                           <div class="form-group row">
                             <label for="lastname" class="col-4 col-form-label">Apellidos</label> 
                             <div class="col-8">
-                              <p id="apellidos"><input name="lastname" placeholder="Apellidos" class="form-control here" type="text"></p>
+                              <input name="lastname" id="apellidos" placeholder="Apellidos" class="form-control here" type="text">
                             </div>
                           </div>
                           <div class="form-group row">
