--- a/my-profile.html
+++ b/my-profile.html
@@ -87,13 +87,13 @@
                           <div class="form-group row">
                             <label for="email" class="col-4 col-form-label">Edad</label> 
                             <div class="col-8">
-                              <input id="email" name="email" placeholder="Edad" class="form-control form-control here" type="text">
+                              <input id="edad" name="email" placeholder="Edad" class="form-control form-control here" type="text">
                             </div>
                           </div>
                           <div class="form-group row">
                             <label for="email" class="col-4 col-form-label">Teléfono</label> 
                             <div class="col-8">
-                              <input id="email" name="telefono" placeholder="Teléfono" class="form-control form-control here" type="text">
+                              <input id="tel" name="telefono" placeholder="Teléfono" class="form-control form-control here" type="text">
                             </div>
                           </div>
                           <br>
