--- a/my-profile.html
+++ b/my-profile.html
@@ -68,7 +68,7 @@
                     <form>
                           <div class="form-group row">
                             <label for="name" class="col-4 col-form-label">Nombres</label> 
-                            <div class="col-8">
+                            <div class="col-8" id="demo">
                               <input name="name"  class="form-control here" placeholder="Nombres" id="nombres" type="text"> 
                             </div>
                           </div>
