--- a/my-profile.html
+++ b/my-profile.html
@@ -74,7 +74,7 @@
                           </div>
                           <div class="form-group row">
                             <label for="lastname" class="col-4 col-form-label">Apellidos</label> 
-                            <div class="col-8">
+                            <div class="col-8" id="demo2">
                               <input name="lastname" id="apellidos" placeholder="Apellidos" class="form-control here" type="text">
                             </div>
                           </div>
