--- a/my-profile.html
+++ b/my-profile.html
@@ -100,7 +100,7 @@
                           <div class="form-group row">
                             <div class="offset-4 col-8">
                               <button name="submit" type="button" class="btn btn-primary" onclick="persona()">Guardar los datos</button>
-                              <button name="submit" type="button" class="btn btn-primary" onclick="edit()">Editar los datos</button>
+                              <button name="submit" type="button" class="btn btn-primary" onclick="borrar()">Borrar los datos</button>
                             </div>
                           </div>
                         </form>
