--- a/my-profile.html
+++ b/my-profile.html
@@ -110,7 +110,7 @@
                           <div class="form-group row">
                             <div class="offset-4 col-8">
                               <button name="submit" type="button" class="btn btn-primary" onclick="persona();validarNombres();validarApellidos();validarEdad();validarTel();validarEmail();">Guardar los datos</button>
-                              <button name="submit" type="reset" class="btn btn-primary" onclick="borrar()">Borrar los datos</button>
+                              <button name="submit" type="submit" class="btn btn-primary" onclick="borrar()">Borrar los datos</button>
                             </div>
                           </div>
                         </form>
